--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">VisitRD</string>
+    <string name="app_name">Visit RD</string>
     <string name="logo">Logo</string>
+    <string name="search">Search</string>
+    <string name="visits">Visits</string>
 </resources>
