Adding Functionality to splash screen and adding list to Main activity.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,5 +3,7 @@
     <string name="app_name">Visita RD</string>
     <string name="logo">Logo</string>
     <string name="search">Buscar</string>
-    <string name="visits">Visitas</string>
+    <string name="visits">Ver Visitas</string>
+    <string name="name">Nombre del Lugar</string>
+    <string name="location">Ubicación del Lugar</string>
 </resources>
