--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,6 +4,11 @@
     <string name="logo">Logo</string>
     <string name="search">Buscar</string>
     <string name="visits">Ver Visitas</string>
-    <string name="name">Nombre del Lugar</string>
-    <string name="location">Ubicación del Lugar</string>
+    <string name="place_name">Nombre del Lugar</string>
+    <string name="place_location">Ubicación del Lugar</string>
+    <string name="description_label">Descripción</string>
+    <string name="description">Descripción</string>
+    <string name="comments_label">Comentarios</string>
+    <string name="user_name">Usuario</string>
+    <string name="comment_user">Comentario</string>
 </resources>
