--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -11,4 +11,5 @@
     <string name="comments_label">Comentarios</string>
     <string name="user_name">Usuario</string>
     <string name="comment_user">Comentario</string>
+    <string name="todo">TODO</string>
 </resources>
