--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="comments_label">Comments</string>
     <string name="user_name">User</string>
     <string name="comment_user">Comment</string>
+    <string name="todo">TODO</string>
 </resources>
