--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="user_name">User</string>
     <string name="comment_user">Comment</string>
     <string name="todo">TODO</string>
+    <string name="title_activity_maps">Maps Activity</string>
 </resources>
