--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="logo">Logo</string>
     <string name="search">Search</string>
     <string name="visits">View Visits</string>
+    <string name="visit">Visit</string>
     <string name="place_name">Place Name</string>
     <string name="place_location">Place Location</string>
     <string name="description_label">Description</string>
@@ -10,6 +11,5 @@
     <string name="comments_label">Comments</string>
     <string name="user_name">User</string>
     <string name="comment_user">Comment</string>
-    <string name="todo">TODO</string>
     <string name="title_activity_maps">Maps Activity</string>
 </resources>
