--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_maps">Maps Activity</string>
     <string name="view_more">...view more</string>
     <string name="submit_rating">Submit Rating</string>
+    <string name="no_permission">Sorry, the app does not have the permission to access location, enable the permission and try again.</string>
 </resources>
