--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="place_location">Place Location</string>
     <string name="description_label">Description</string>
     <string name="description">Description</string>
-    <string name="comments_label">Comments</string>
+    <string name="comments_label">Reviews and Google Search</string>
     <string name="user_name">User</string>
     <string name="comment_user">Comment</string>
     <string name="title_activity_maps">Maps Activity</string>
