--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,19 +2,16 @@
     <string name="app_name">Visit RD</string>
     <string name="logo">Logo</string>
     <string name="search">Search</string>
-    <string name="visits">View Visits</string>
     <string name="visit">Visit</string>
     <string name="place_name">Place Name</string>
     <string name="place_location">Place Location</string>
     <string name="description_label">Description</string>
     <string name="description">Description</string>
     <string name="comments_label">Reviews and Google Search</string>
-    <string name="user_name">User</string>
-    <string name="comment_user">Comment</string>
     <string name="title_activity_maps">Maps Activity</string>
-    <string name="view_more">...view more</string>
-    <string name="submit_rating">Submit Rating</string>
     <string name="no_permission">Sorry, the app does not have the permission to access location, enable the permission and try again.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="comment">Comment</string>
+    <string name="user_comment">User Comment</string>
 </resources>
