--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,6 +4,7 @@
     <string name="logo">Logo</string>
     <string name="search">Buscar</string>
     <string name="visit">Visitar</string>
+    <string name="visits">Ver visitas</string>
     <string name="place_name">Nombre del Lugar</string>
     <string name="place_location">Ubicación del Lugar</string>
     <string name="description_label">Descripción</string>
@@ -14,4 +15,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="comment">Comentario</string>
     <string name="user_comment">Usuario del Comentario</string>
+    <string name="favorites">Favoritos</string>
 </resources>
