--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="logo">Logo</string>
     <string name="search">Search</string>
     <string name="visit">Visit</string>
+    <string name="visits">View visits</string>
     <string name="place_name">Place Name</string>
     <string name="place_location">Place Location</string>
     <string name="description_label">Description</string>
@@ -14,4 +15,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="comment">Comment</string>
     <string name="user_comment">User Comment</string>
+    <string name="favorites">Favorites</string>
 </resources>
