Adding favorite button to principal list.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="logo">Logo</string>
     <string name="search">Search</string>
     <string name="visit">Visit</string>
+    <string name="share">Share</string>
     <string name="visits">View visits</string>
     <string name="place_name">Place Name</string>
     <string name="place_location">Place Location</string>
