--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,6 +4,7 @@
     <string name="logo">Logo</string>
     <string name="search">Buscar</string>
     <string name="visit">Visitar</string>
+    <string name="share">Compartir</string>
     <string name="visits">Ver visitas</string>
     <string name="place_name">Nombre del Lugar</string>
     <string name="place_location">Ubicación del Lugar</string>
