--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="place_location">Place Location</string>
     <string name="description_label">Description</string>
     <string name="description">Description</string>
-    <string name="comments_label">Reviews and Google Search</string>
+    <string name="comments_label">Comments</string>
     <string name="title_activity_maps">Maps Activity</string>
     <string name="no_permission">Sorry, the app does not have the permission to access location, enable the permission and try again.</string>
     <!-- TODO: Remove or change this placeholder text -->
@@ -17,4 +17,5 @@
     <string name="comment">Comment</string>
     <string name="user_comment">User Comment</string>
     <string name="favorites">Favorites</string>
+    <string name="add_comment">Add a comment</string>
 </resources>
